--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@biomejs/biome": "^1.5.3",
+    "@google/generative-ai": "^0.11.4",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
